# java-developer-skill

./: .gitattributes  .gitignore  LICENSE  README.md
skills/.curated/java-mysql-query/: SKILL.md
skills/java-mysql-query/: SKILL.md
skills/java-mysql-query/agents/: openai.yaml
skills/java-mysql-query/scripts/: AuditReportGenerator.java  CicdHelper.java  CsvExporter.java  DatabaseQuery.java  ErdViewer.java  ReqAnalyzer.java  SkillBridge.java  SqlExplainAnalyzer.java  TableDependency.java  cicd-helper.js  cicd_helper.py  csv-exporter.js  csv_exporter.py  database-query.js  (+9 more)
skills/java-superpowers-contract/: .editorconfig  .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
skills/java-superpowers-contract/.github/workflows/: java-superpowers-audit.yml
skills/java-superpowers-contract/agents/: openai.yaml
skills/java-superpowers-contract/docs/: TOOLCHAIN.md
skills/java-superpowers-contract/references/: commit-message-samples.md  gitignore-template.md  quality-metrics-guide.md  sample-audit-report.md
skills/java-superpowers-contract/scripts/: AuditReportGenerator.java  CsvExporter.java  DatabaseQuery.java  ErdViewer.java  SqlExplainAnalyzer.java  audit-report-generator.js  audit_report_generator.py  cicd-helper.js  cicd_helper.py  csv-exporter.js  csv_exporter.py  database-query.js  database_query.py  erd-viewer.js  erd_viewer.py  java_compiler.py  java_static_analyzer.py  req-analyzer.js  req_analyzer.py  skill-bridge.js  skill_bridge.py  sql-explain-analyzer.js  sql_explain_analyzer.py  table-dependency.js  table_dependency.py
skills/multi-db-analyzer/: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
skills/multi-db-analyzer/.github/workflows/: multi-db-analyzer-audit.yml
skills/multi-db-analyzer/agents/: openai.yaml
skills/multi-db-analyzer/docker/: .env.docker  docker-compose.yml  init.sql  pg-init.sql
skills/multi-db-analyzer/docs/: TOOLCHAIN.md
skills/multi-db-analyzer/references/: commit-message-samples.md  gitignore-template.md  quality-metrics-guide.md  sample-audit-report.md
skills/multi-db-analyzer/scripts/: audit_report_generator.py  cicd_helper.py  cred_manager.py  csv_exporter.py  database_query.py  db_engine.py  db_engine_extras.py  erd_viewer.py  req_analyzer.py  skill_bridge.py  sql_explain_analyzer.py  table_dependency.py
skills/multi-db-analyzer/templates/: erd_template.html  table_deps_template.html
skills/multi-db-analyzer/tests/: conftest.py  test_cred_manager.py  test_database_query.py  test_erd_viewer.py  test_other_scripts.py  test_req_analyzer.py
skills/token-economizer/: SKILL.md
(+4 files in other folders)
